--- a/BuyMeNow/AppShell.xaml
+++ b/BuyMeNow/AppShell.xaml
@@ -4,11 +4,66 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BuyMeNow"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Flyout"
+    Shell.NavBarIsVisible="False">
+    
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <Shell.FlyoutHeader>
+        <Grid BackgroundColor="#145391" HeightRequest="230">
+            <Image Source="appiconfg.svg" />
+        </Grid>
+    </Shell.FlyoutHeader>
+    
+    <!-- secondary pages/features: need to be distinct from the tab bar -->
+    <ShellContent Icon="home.png"
+                    Title="Home"
+                    ContentTemplate="{DataTemplate local:MainPage}"
+                    Route="MainPage" />
+
+    <ShellContent Icon="user.png"
+                    Title="My Account"
+                    ContentTemplate="{DataTemplate local:MainPage}"
+                    Route="AccountPage" />
+
+    <!-- main features are in a tab bar -->
+    
+    <FlyoutItem Title="Shopping" Icon="shopping.png" Shell.TabBarIsVisible="True">
+        <ShellContent Icon="grocery.png"
+                      Title="Lists"
+                      ContentTemplate="{DataTemplate local:ShoppingListPage}"
+                      Route="ShoppingListPage" />
+        <ShellContent Icon="history.png"
+                      Title="History"
+                      ContentTemplate="{DataTemplate local:ItemsHistoryPage}" 
+                      Route="ItemsHistoryPage" />
+        <ShellContent Icon="brain.png"
+                      Title="Recommendations"
+                      ContentTemplate="{DataTemplate local:RecommendationsPage}" 
+                      Route="RecommendationsPage"/>
+    </FlyoutItem>
+
+    <ShellContent Icon="logout.png"
+                    Title="Sign out"
+                    ContentTemplate="{DataTemplate local:SigninPage}"
+                    Route="SigninPage" />
+
+    <ShellContent Icon="about.png"
+                    Title="About"
+                    ContentTemplate="{DataTemplate local:MainPage}"
+                    Route="AboutPage" />
+
+    <ShellContent Icon="terms.png"
+                    Title="Terms and Conditions"
+                    ContentTemplate="{DataTemplate local:MainPage}"
+                    Route="TermsPage" />
+
+    <ShellContent Icon="privacy.png"
+                    Title="Privacy policy"
+                    ContentTemplate="{DataTemplate local:MainPage}"
+                    Route="PrivacyPage" />
+
+    
+
+    
 
 </Shell>
