--- a/BuyMeNow/AppShell.xaml
+++ b/BuyMeNow/AppShell.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BuyMeNow"
     Shell.FlyoutBehavior="Flyout"
-    Shell.NavBarIsVisible="False">
+    Shell.NavBarIsVisible="True">
     
 
     <Shell.FlyoutHeader>
@@ -61,9 +61,5 @@
                     Title="Privacy policy"
                     ContentTemplate="{DataTemplate local:MainPage}"
                     Route="PrivacyPage" />
-
-    
-
-    
 
 </Shell>
