--- a/BuyMeNow/View/SigninPage.xaml
+++ b/BuyMeNow/View/SigninPage.xaml
@@ -2,11 +2,46 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BuyMeNow.SigninPage"
-             Title="SigninPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="SigninPage"
+             Shell.NavBarIsVisible="False">
+
+    <Grid BackgroundColor="White" RowDefinitions="210, 20, 40, 50, 80, 210, 250">
+        <StackLayout Grid.Row="0" BackgroundColor="AliceBlue">
+            <Image Source="user2.png" Margin="0, 70, 0, 0" Aspect="AspectFit"/>
+        </StackLayout>
+
+        <Label Grid.Row="3" Text="Welcome to Buy Me Now" HorizontalOptions="Center" FontSize="Title" Padding="0" Margin="0"/>
+        <Label Grid.Row="4" Text="Sign in to continue" HorizontalOptions="Center" FontSize="Subtitle"/>
+
+        <StackLayout Grid.Row="5" Orientation="Vertical" HorizontalOptions="CenterAndExpand">
+            <Frame BackgroundColor="Transparent" BorderColor="#00ace6" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="30">
+                <StackLayout Orientation="Horizontal" WidthRequest="350">
+                    <Frame HeightRequest="40" WidthRequest="40" CornerRadius="30" Padding="0" Margin="5">
+                        <Image Source="user1.png" Margin="0"/>
+                    </Frame>
+                    <Entry Text="{Binding username}" Placeholder="Username" TextColor="Black" VerticalOptions="Center" HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
+                </StackLayout>
+            </Frame>
+            <Frame BackgroundColor="Transparent" BorderColor="#00ace6" Padding="0" Margin="0,15,0,0" HorizontalOptions="FillAndExpand" CornerRadius="30">
+                <StackLayout Orientation="Horizontal" WidthRequest="350">
+                    <Frame HeightRequest="40" WidthRequest="40" BorderColor="#00ace6" CornerRadius="30" Padding="0" Margin="5">
+                        <Image Source="lock.png" Margin="0"/>
+                    </Frame>
+                    <Entry Text="{Binding password}" Placeholder="Password" TextColor="Black" VerticalOptions="Center" HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
+                </StackLayout>
+            </Frame>
+
+            <StackLayout Orientation="Horizontal" Margin="0,10,0,0" Padding="0">
+                <CheckBox IsChecked="False"/>
+                <Label Text="Remember Me" TextColor="DarkGrey" FontSize="Small" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                <Label Text="Forgot Password" TextColor="#00a5f7" HorizontalOptions="EndAndExpand" VerticalTextAlignment="Center"/>
+            </StackLayout>
+            <Button Text="Sign In" CornerRadius="30" WidthRequest="200" Margin="0,15,0,0" Command="{Binding LoginCommand}"/>
+            
+        </StackLayout>
+        <StackLayout Grid.Row="6" Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,60,0,0" Padding="0">
+            <Label Text="New User?" TextColor="DarkGray" FontSize="Small"/>
+            <Label Text="Sign Up" TextColor="#00a5f7" FontAttributes="Bold" FontSize="Small"/>
+        </StackLayout>
+    </Grid>
 </ContentPage>
