Fully implemented the registration and login functionalities -these are the first few initial pages of the app -interactive UI implemented -backend logic implemnted: adding new users, authentication and authorization -passwords are stored securely in the database, hashed and salted

--- a/BuyMeNow/AppShell.xaml
+++ b/BuyMeNow/AppShell.xaml
@@ -14,6 +14,7 @@
         </Grid>
     </Shell.FlyoutHeader>
 
+    <!--pages that are still part of the shell but not explicitly visible (navigating outside of the shell)-->
     <ShellContent Title="Loading" 
                   ContentTemplate="{DataTemplate startupViews:LoadingPage}" 
                   FlyoutItemIsVisible="False" 
@@ -35,6 +36,13 @@
                   Shell.TabBarIsVisible="False"  
                   Route="SignupPage"/>
 
+    <ShellContent Title="Reset" 
+                  ContentTemplate="{DataTemplate startupViews:ResetPasswordPage}" 
+                  FlyoutItemIsVisible="False" 
+                  Shell.FlyoutBehavior="Disabled" 
+                  Shell.TabBarIsVisible="False"  
+                  Route="ResetPasswordPage"/>
+    <!--till here-->
     <ShellContent Icon="home.png" 
                   Title="Home" 
                   ContentTemplate="{DataTemplate dashboardViews:HomePage}" 
