--- a/BuyMeNow/Views/Startup/ResetPasswordPage.xaml
+++ b/BuyMeNow/Views/Startup/ResetPasswordPage.xaml
@@ -29,16 +29,16 @@
                     <Frame HeightRequest="40" WidthRequest="40" CornerRadius="30" Padding="0" Margin="5">
                         <Image Source="user1.png" Margin="0"/>
                     </Frame>
-                    <Entry Text="{Binding UsernameF}" Placeholder="Username" TextColor="Black" VerticalOptions="Center" 
+                    <Entry Text="{Binding AccountDetails.Username, Mode=TwoWay}" Placeholder="Username" TextColor="Black" VerticalOptions="Center" 
                            HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
                 </StackLayout>
             </Frame>
             <Frame BackgroundColor="Transparent" BorderColor="#00ace6" Padding="0" Margin="0,15,0,0" HorizontalOptions="FillAndExpand" CornerRadius="30">
                 <StackLayout Orientation="Horizontal" WidthRequest="350">
                     <Frame HeightRequest="40" WidthRequest="40" BorderColor="#00ace6" CornerRadius="30" Padding="0" Margin="5" HasShadow="True">
-                        <Image Source="lock.png" Margin="0"/>
+                        <ImageButton Source="{Binding Img}" Margin="0" Command="{Binding ShowPasswordCommand}"/>
                     </Frame>
-                    <Entry Text="{Binding PasswordF}" Placeholder="New Password" IsPassword="True" TextColor="Black" VerticalOptions="Center"
+                    <Entry Text="{Binding AccountDetails.Password, Mode=TwoWay}" Placeholder="New Password" IsPassword="{Binding IsPass}" TextColor="Black" VerticalOptions="Center"
                            HorizontalOptions="FillAndExpand" Margin="0,0,20,0"/>
                 </StackLayout>
             </Frame>
