Practically finished the preprocessing part, trained and tested MatrixFactorization for the recommendation system.

--- a/BuyMeNow/Views/Main/AboutPage.xaml
+++ b/BuyMeNow/Views/Main/AboutPage.xaml
@@ -28,6 +28,8 @@
                    FontSize="Medium"/>
             <Label Text="The third feature allows you to see the recommendation that were made by the system according to your interactions/history." 
                    FontSize="Medium"/>
+		<Label Text="The fourth feature allows you to see the geolocation of where the store where you bought an item is." 
+                   FontSize="Medium"/>
         </StackLayout>
 
     </Grid>
