--- a/BuyMeNow/Views/Main/AddItemPage.xaml
+++ b/BuyMeNow/Views/Main/AddItemPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BuyMeNow.Views.Main.AddItemPage"
-             Title="AddItemPage">
+             Title="AddItemPage"
+             Shell.TabBarIsVisible="False">
 
     <Grid BackgroundColor="GhostWhite" RowDefinitions="*">
         <Frame BackgroundColor="AliceBlue" CornerRadius="125" HorizontalOptions="EndAndExpand" 
