--- a/BuyMeNow/Views/Main/AddUpdateShoppingListPage.xaml
+++ b/BuyMeNow/Views/Main/AddUpdateShoppingListPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BuyMeNow.Views.Main.AddUpdateShoppingListPage"
-             Title="Add/UpdateShoppingListPage">
+             Title="Add/UpdateShoppingListPage"
+             Shell.TabBarIsVisible="False">
     <Grid BackgroundColor="GhostWhite" RowDefinitions="*">
         <Frame BackgroundColor="AliceBlue" CornerRadius="125" HorizontalOptions="EndAndExpand" 
                WidthRequest="250" HeightRequest="250" Padding="0" Margin="0, -1, -100, 0">
