--- a/BuyMeNow/Views/Main/ShoppingListPage.xaml
+++ b/BuyMeNow/Views/Main/ShoppingListPage.xaml
@@ -5,7 +5,8 @@
              xmlns:viewmodel="clr-namespace:BuyMeNow.ViewModels.Main"
              x:DataType="viewmodel:ShoppingListPageViewModel"
              x:Class="BuyMeNow.Views.Main.ShoppingListPage"
-             Title="Shopping List Page">
+             Title="Shopping List Page"
+             Shell.TabBarIsVisible="False">
     <Grid BackgroundColor="GhostWhite" RowDefinitions="120, *">
         <Frame BackgroundColor="AliceBlue" CornerRadius="125" HorizontalOptions="EndAndExpand" 
                WidthRequest="250" HeightRequest="250" Padding="0" Margin="0, -1, -100, 0">
@@ -32,10 +33,10 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="model:Item">
                     <Frame HeightRequest="100" WidthRequest="350" Margin="10">
-                        <VerticalStackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Spacing="5">
-                            <Label Text="{Binding Title}" FontAttributes="Bold" TextDecorations="Underline"/>
-                            <Label Text="{Binding StoreName}" FontAutoScalingEnabled="True"/>
-                            <Label Text="{Binding Price, StringFormat='£{0}'}"/>
+                        <VerticalStackLayout Spacing="5">
+                            <Label Text="{Binding Title}" FontAttributes="Bold" TextDecorations="Underline" HorizontalOptions="CenterAndExpand"/>
+                            <Label Text="{Binding StoreName}" FontAutoScalingEnabled="True" HorizontalOptions="CenterAndExpand"/>
+                            <Label Text="{Binding Price, StringFormat='£{0}'}" HorizontalOptions="CenterAndExpand"/>
                         </VerticalStackLayout>
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding Source={x:RelativeSource AncestorType={x:Type viewmodel:ShoppingListPageViewModel}}, Path=DecideActionCommand}" 
